--- a/index.html
+++ b/index.html
@@ -129,6 +129,46 @@
         </section>
 
         <section class="col-span-3 flex flex-col gap-3 overflow-hidden min-h-0">
+            <div class="panel p-2 flex-none">
+                <div class="label-tech mb-2 border-b border-cyan-900 pb-1">Contact Registry</div>
+                <div class="grid grid-cols-2 gap-1 mb-2">
+                    <select id="contact-filter" class="bg-black border border-cyan-900 text-cyan-500 text-[9px] px-1 py-1 outline-none">
+                        <option value="ALL">FILTER: ALL</option>
+                        <option value="TRACKED">FILTER: TRACKED</option>
+                        <option value="AMBIGUOUS">FILTER: AMBIG</option>
+                        <option value="LOST">FILTER: LOST</option>
+                        <option value="PINNED">FILTER: PINNED</option>
+                    </select>
+                    <select id="contact-sort" class="bg-black border border-cyan-900 text-cyan-500 text-[9px] px-1 py-1 outline-none">
+                        <option value="THREAT">SORT: THREAT</option>
+                        <option value="RANGE">SORT: RANGE</option>
+                        <option value="LABEL">SORT: LABEL</option>
+                        <option value="CONFIDENCE">SORT: CONF</option>
+                    </select>
+                </div>
+                <div id="contact-list" class="contact-list mb-2"></div>
+                <div class="grid grid-cols-3 gap-1 mb-2">
+                    <button id="contact-pin-btn" class="text-[9px] border border-cyan-900 hover:bg-cyan-950/40 px-1 py-1">PIN/UNPIN</button>
+                    <input id="contact-relabel-input" type="text" maxlength="12" placeholder="ALIAS" class="bg-black border border-cyan-900 text-cyan-400 text-[9px] px-1 py-1 uppercase">
+                    <button id="contact-relabel-btn" class="text-[9px] border border-cyan-900 hover:bg-cyan-950/40 px-1 py-1">RENAME</button>
+                </div>
+                <button id="contact-clear-lost" class="w-full text-[9px] border border-red-900 text-red-400 hover:bg-red-950/30 px-1 py-1">CLEAR LOST CONTACTS</button>
+            </div>
+
+            <div class="panel p-2 flex-none">
+                <div class="label-tech mb-2 border-b border-cyan-900 pb-1">Manual Solution</div>
+                <div class="grid grid-cols-2 gap-1 text-[9px]">
+                    <input id="solution-bearing" type="number" placeholder="BRG (deg)" class="bg-black border border-cyan-900 text-cyan-400 px-1 py-1">
+                    <input id="solution-range" type="number" placeholder="RNG (m)" class="bg-black border border-cyan-900 text-cyan-400 px-1 py-1">
+                    <input id="solution-course" type="number" placeholder="CRS (deg)" class="bg-black border border-cyan-900 text-cyan-400 px-1 py-1">
+                    <input id="solution-speed" type="number" placeholder="SPD (kts)" class="bg-black border border-cyan-900 text-cyan-400 px-1 py-1">
+                </div>
+                <div class="flex items-center justify-between mt-2 text-[9px]">
+                    <span id="solution-confidence" class="text-orange-400">CONF: --</span>
+                    <button id="solution-save-btn" class="border border-cyan-900 px-2 py-1 hover:bg-cyan-950/40">SAVE SOLUTION</button>
+                </div>
+            </div>
+
             <div class="panel flex-1 flex flex-col">
                 <div class="p-2 border-b border-cyan-900 label-tech text-center flex justify-between items-center">
                     <span>Broadband Waterfall (Ambient)</span>
