Fix depth panel width and 2D isoline contour rendering

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="panel flex-[2] relative overflow-hidden">
                 <div class="h-full flex">
                     <div id="tactical-viewport" class="flex-1"></div>
-                    <div id="depth-profile-panel" class="w-16 border-l border-cyan-900 bg-black/40 p-1">
+                    <div id="depth-profile-panel" class="border-l border-cyan-900 bg-black/40 p-1">
                         <div class="text-[8px] text-cyan-600 text-center mb-1">WATER COLUMN</div>
                         <canvas id="depth-profile-canvas"></canvas>
                     </div>
