Add campaign vertical slice with missions and persistence

--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@
                 </div>
             </div>
 
+            <div class="panel p-2 flex-none">
+                <div class="label-tech mb-2 border-b border-cyan-900 pb-1">Campaign</div>
+                <div class="grid grid-cols-3 gap-1 mb-2">
+                    <select id="mission-select" class="col-span-2 bg-black border border-cyan-900 text-cyan-500 text-[9px] px-1 py-1 outline-none"></select>
+                    <button id="mission-reset-btn" class="text-[9px] border border-red-900 text-red-400 hover:bg-red-950/30 px-1 py-1">RESET</button>
+                </div>
+                <div id="mission-title" class="text-[10px] text-cyan-300 font-bold mb-1">--</div>
+                <div id="mission-status" class="text-[9px] text-orange-300 mb-1">--</div>
+                <div id="mission-briefing" class="text-[9px] text-cyan-700 mb-2 leading-tight">--</div>
+                <div id="mission-objectives" class="text-[9px] text-cyan-400"></div>
+            </div>
+
             <div class="panel flex-1 flex flex-col">
                 <div class="p-2 border-b border-cyan-900 label-tech text-center flex justify-between items-center">
                     <span>Broadband Waterfall (Ambient)</span>
