--- a/index.html
+++ b/index.html
@@ -53,6 +53,46 @@
                     <button id="ping-btn" class="w-full py-2 border border-red-900 bg-red-950/10 hover:bg-red-950/40 text-red-500 text-[10px] font-bold uppercase tracking-widest transition-all">
                         Active Pulse (Ping)
                     </button>
+                    <div class="border border-cyan-900/60 p-2 space-y-2 bg-cyan-950/10">
+                        <div class="text-[9px] text-cyan-500 uppercase tracking-wider">DEMON Controls</div>
+                        <div>
+                            <div class="flex justify-between text-[9px] mb-1">
+                                <span>Focus Width</span>
+                                <span id="demon-focus-width-value" class="text-cyan-300">1.3Hz</span>
+                            </div>
+                            <input
+                                type="range"
+                                id="demon-focus-width-slider"
+                                min="0.6"
+                                max="3.0"
+                                step="0.1"
+                                value="1.3"
+                                class="w-full"
+                            >
+                        </div>
+                        <div class="flex items-center justify-between text-[9px]">
+                            <span>Self-Noise Suppression</span>
+                            <label class="flex items-center gap-1 cursor-pointer">
+                                <input type="checkbox" id="demon-self-noise-toggle" checked>
+                                <span class="text-cyan-300">ON</span>
+                            </label>
+                        </div>
+                        <div>
+                            <div class="flex justify-between text-[9px] mb-1">
+                                <span>Stability/Responsiveness</span>
+                                <span id="demon-stability-value" class="text-cyan-300">55</span>
+                            </div>
+                            <input
+                                type="range"
+                                id="demon-stability-slider"
+                                min="0"
+                                max="100"
+                                step="1"
+                                value="55"
+                                class="w-full"
+                            >
+                        </div>
+                    </div>
                 </div>
             </div>
 
