Add BTR bearing reference toggle and compass/depth cues

--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
                             <option value="AMBER">AMBER</option>
                             <option value="THERMAL">THERMAL</option>
                         </select>
+                        <select id="btr-bearing-reference-select" class="bg-black border border-cyan-800 text-cyan-500 text-[9px] px-1 outline-none" title="BTR bearing reference">
+                            <option value="REL" selected>REL</option>
+                            <option value="TRUE">TRUE</option>
+                        </select>
                     </div>
                     <span>000° &lt;---&gt; 360°</span>
                 </div>
