--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <main class="flex-1 grid grid-cols-12 grid-rows-1 gap-3 overflow-hidden min-h-0">
-        <section id="left-column" class="col-span-3 h-full overflow-hidden min-h-0">
+        <section id="left-column" class="col-span-3 h-full overflow-hidden min-h-0 self-stretch">
             <div class="panel p-3 flex-none flex flex-col gap-2">
                 <div class="label-tech border-b border-cyan-900 pb-1">Main Drive Control</div>
 
@@ -99,42 +99,43 @@
                             <button id="demon-controls-toggle" class="text-cyan-400 hover:text-cyan-200 text-lg leading-none" title="Toggle DEMON Controls">&#9654;</button>
                         </div>
                         <div id="demon-controls-content" class="hidden space-y-2">
-                        <div>
-                            <div class="flex justify-between text-[9px] mb-1">
-                                <span>Focus Width</span>
-                                <span id="demon-focus-width-value" class="text-cyan-300">1.3Hz</span>
+                            <div>
+                                <div class="flex justify-between text-[9px] mb-1">
+                                    <span>Focus Width</span>
+                                    <span id="demon-focus-width-value" class="text-cyan-300">1.3Hz</span>
+                                </div>
+                                <input
+                                    type="range"
+                                    id="demon-focus-width-slider"
+                                    min="0.6"
+                                    max="3.0"
+                                    step="0.1"
+                                    value="1.3"
+                                    class="w-full"
+                                >
                             </div>
-                            <input
-                                type="range"
-                                id="demon-focus-width-slider"
-                                min="0.6"
-                                max="3.0"
-                                step="0.1"
-                                value="1.3"
-                                class="w-full"
-                            >
-                        </div>
-                        <div class="flex items-center justify-between text-[9px]">
-                            <span>Self-Noise Suppression</span>
-                            <label class="flex items-center gap-1 cursor-pointer">
-                                <input type="checkbox" id="demon-self-noise-toggle" checked>
-                                <span class="text-cyan-300">ON</span>
-                            </label>
-                        </div>
-                        <div>
-                            <div class="flex justify-between text-[9px] mb-1">
-                                <span>Stability/Responsiveness</span>
-                                <span id="demon-stability-value" class="text-cyan-300">55</span>
+                            <div class="flex items-center justify-between text-[9px]">
+                                <span>Self-Noise Suppression</span>
+                                <label class="flex items-center gap-1 cursor-pointer">
+                                    <input type="checkbox" id="demon-self-noise-toggle" checked>
+                                    <span class="text-cyan-300">ON</span>
+                                </label>
                             </div>
-                            <input
-                                type="range"
-                                id="demon-stability-slider"
-                                min="0"
-                                max="100"
-                                step="1"
-                                value="55"
-                                class="w-full"
-                            >
+                            <div>
+                                <div class="flex justify-between text-[9px] mb-1">
+                                    <span>Stability/Responsiveness</span>
+                                    <span id="demon-stability-value" class="text-cyan-300">55</span>
+                                </div>
+                                <input
+                                    type="range"
+                                    id="demon-stability-slider"
+                                    min="0"
+                                    max="100"
+                                    step="1"
+                                    value="55"
+                                    class="w-full"
+                                >
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,14 +170,14 @@
                 </div>
             </div>
 
-            <div class="panel p-2 min-h-0">
+            <div class="panel p-2 flex-1 min-h-0">
                 <div class="label-tech">LOFAR (Narrowband Frequency)</div>
                 <div class="flex-1 min-h-0 bg-black/50 relative">
                     <canvas id="lofar-canvas"></canvas>
                 </div>
             </div>
 
-            <div class="panel p-2 min-h-0">
+            <div class="panel p-2 flex-1 min-h-0">
                 <div class="label-tech">DEMON (Propeller Signature)</div>
                 <div class="flex-1 min-h-0 bg-black/50 relative">
                     <canvas id="demon-canvas"></canvas>
