Replace top title with tactical label

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="crt-overlay"></div>
 
     <header class="panel p-2 flex justify-between items-center border-b-2 border-cyan-800">
-        <h1 class="text-lg font-bold tracking-[0.2em] glow-text uppercase text-cyan-400">Tactical Command System v5.7</h1>
+        <h1 class="text-lg font-bold tracking-[0.2em] glow-text uppercase text-cyan-400">SILENT ABYSS // TACTICAL</h1>
         <div class="flex gap-6 text-[11px]">
             <div>DEPTH: <span id="depth-text" class="text-white">125m</span></div>
             <div class="flex items-center gap-4">
