Add point-cloud terrain mode for 3D tactical view

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     <label class="cursor-pointer flex items-center gap-1">
                         <input type="radio" name="view-mode" value="grid"> <span class="text-cyan-400">GRID</span>
                     </label>
+                    <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
+                        <input type="checkbox" id="terrain-point-cloud-toggle"> <span class="text-cyan-300">P-CLOUD</span>
+                    </label>
                 </div>
                 <div>SONAR: <span id="tactical-status" class="text-green-500 font-bold tracking-widest">PASSIVE MODE</span></div>
                 <div id="clock">00:00:00</div>
