Add UI toggles for 2D snap and prediction compare

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                         <input type="checkbox" id="terrain-point-cloud-toggle"> <span class="text-cyan-300">P-CLOUD</span>
                     </label>
                     <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
+                        <input type="checkbox" id="snap-to-contact-2d-toggle"> <span class="text-cyan-300">SNAP2D</span>
+                    </label>
+                    <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
+                        <input type="checkbox" id="compare-prediction-2d-toggle"> <span class="text-cyan-300">CMP-PRED</span>
+                    </label>
+                    <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
                         <span class="text-cyan-300">ATM</span>
                         <select id="atmosphere-preset-select" class="bg-black border border-cyan-900 text-cyan-300 text-[9px] px-1 py-[1px] outline-none">
                             <option value="subtle">SUBTLE</option>
