Add runtime controls for 2D visual modes

--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
                         <input type="checkbox" id="compare-prediction-2d-toggle"> <span class="text-cyan-300">CMP-PRED</span>
                     </label>
                     <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
+                        <input type="checkbox" id="enhanced-2d-visuals-toggle" checked> <span class="text-cyan-300">ENH-2D</span>
+                    </label>
+                    <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
+                        <span class="text-cyan-300">V-MODE</span>
+                        <select id="visual-mode-select" class="bg-black border border-cyan-900 text-cyan-300 text-[9px] px-1 py-[1px] outline-none">
+                            <option value="stealth" selected>STL</option>
+                            <option value="engagement">ENG</option>
+                            <option value="alarm">ALM</option>
+                        </select>
+                    </label>
+                    <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
                         <span class="text-cyan-300">ATM</span>
                         <select id="atmosphere-preset-select" class="bg-black border border-cyan-900 text-cyan-300 text-[9px] px-1 py-[1px] outline-none">
                             <option value="subtle">SUBTLE</option>
