Improve DEMON cavitation-band response and input-band UI

--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
                                 <span class="text-cyan-300">ON</span>
                             </label>
                         </div>
+                        <div class="flex items-center justify-between text-[9px]">
+                            <span>Input Band</span>
+                            <select id="demon-input-band-select" class="bg-black border border-cyan-900 text-cyan-300 text-[9px] px-1 py-[1px] outline-none">
+                                <option value="MACHINERY" selected>MACH 20-1.8k</option>
+                                <option value="CAVITATION">CAV 1.5k-12k</option>
+                                <option value="HYBRID">HYBRID 20-12k</option>
+                            </select>
+                        </div>
                         <div>
                             <div class="flex justify-between text-[9px] mb-1">
                                 <span>Stability/Responsiveness</span>
