Unify 2D/3D terrain contour rendering and remove 2D texture update bottleneck
- Make shader-bands the default terrain mode for 2D views while keeping legacy contour drawing available and enabled by default in legacy mode.

- Replace per-frame 2D height texture regeneration with a world-anchored tile cache: rebuild only when crossing snapped tile boundaries, and use shader-side world-to-tile UV mapping for smooth movement/rotation.

- Add shared terrain-alignment diagnostics: C/N/E/S/W probe anchors rendered in both 2D and 3D plus probe fingerprint output in the debug HUD.

- Add high-contrast debug terrain visualization tied to debugCoords for easier cross-view terrain matching.

- Extend 3D terrain with contour style modes: shader-bands (default) and legacy-lines (preserved line-segment contour path).

- Theme both 2D and 3D shader terrain from tactical visual mode tokens (stealth/engagement/alarm) so contour/background palettes stay consistent and darker by default.

- Add UI control (3D-CONT) and plumbing to switch 3D contour style at runtime, including persistence via localStorage and query initialization paths.

- Keep point-cloud style behavior intact and ensure terrain contour updates are skipped unless legacy line mode is active.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                         </select>
                     </label>
                     <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
+                        <span class="text-cyan-300">3D-CONT</span>
+                        <select id="terrain-3d-contour-select" class="bg-black border border-cyan-900 text-cyan-300 text-[9px] px-1 py-[1px] outline-none">
+                            <option value="shader-bands" selected>BANDS</option>
+                            <option value="legacy-lines">LINES</option>
+                        </select>
+                    </label>
+                    <label class="cursor-pointer flex items-center gap-1 border-l border-cyan-900 pl-2">
                         <span class="text-cyan-300">ATM</span>
                         <select id="atmosphere-preset-select" class="bg-black border border-cyan-900 text-cyan-300 text-[9px] px-1 py-[1px] outline-none">
                             <option value="subtle">SUBTLE</option>
